<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/fragment_margin"
    android:orientation="vertical"
    android:padding="@dimen/default_elevation"
    android:clipToPadding="false"
    tools:context=".MatchMainFragment">

    <TextView
        android:background="@color/white"
        android:elevation="@dimen/default_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:padding="@dimen/default_inner_padding"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/match_main_title"/>

    <LinearLayout
        android:background="@color/white"
        android:elevation="@dimen/default_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:orientation="vertical"
        android:padding="@dimen/default_inner_padding">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/default_margin_vertical"
                android:text="@string/match_main_protection_label"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/match_protection_condom_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_main_protection_condom"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/match_protection_pep_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_main_protection_prep"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/match_protection_prep_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_main_protection_pep"/>


    </LinearLayout>

    <TextView
        android:id="@+id/match_protection_state"
        android:background="@color/white"
        android:elevation="@dimen/default_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:padding="@dimen/default_inner_padding"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/match_main_protection_no"/>


    <Button
        android:id="@+id/match_make"
        android:elevation="@dimen/default_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:text="@string/match_main_make"/>

</LinearLayout>
