<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fragment_margin"
    android:orientation="vertical"
    android:padding="@dimen/default_elevation"
    android:clipToPadding="false"
    tools:context=".FeedbackFragment">

    <EditText
        android:background="@color/white"
        android:elevation="@dimen/default_elevation"
        android:hint="@string/profile_nick_placeholder"
        android:inputType="textEmailSubject"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:autofillHints=""
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:padding="@dimen/default_inner_padding"/>

    <EditText
        android:background="@color/white"
        android:elevation="@dimen/default_elevation"
        android:gravity="top"
        android:hint="@string/general_placeholder_message"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:autofillHints=""
        android:padding="@dimen/default_inner_padding"/>

    <Button
        android:elevation="@dimen/default_elevation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginVertical="@dimen/default_margin_vertical"
        android:text="@string/general_send"/>


</LinearLayout>